feat: prepara ambiente para aprimorar a prática de uso do dbt.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ requirements.txt
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+docker-compose.yaml
+Dockerfile
 
 # Local History for Visual Studio Code
 .history/
